# quickjs-ng

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  _quickjs.pyi  module.c  pyproject.toml  setup.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  check-upstream.yml  main.yml
quickjs/: __init__.py
tests/: test_callable.py  test_context.py  test_js_features.py  test_memory.py  test_object.py  test_threading.py
